--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -25,11 +25,11 @@ jobs:
         working-directory: ./docs  # Set the working directory for this step
         run: npm run build
 
-    #   - name: Deploy to GitHub Pages
-    #     if: github.event_name != 'pull_request'
-    #     uses: peaceiris/actions-gh-pages@v3
-    #     with:
-    #       github_token: ${{ secrets.GITHUB_TOKEN }}
-    #       publish_dir: ./docs/build
-    #       user_name: github-actions[bot]
-    #       user_email: 41898282+github-actions[bot]@users.noreply.github.com
+      - name: Deploy to GitHub Pages
+        if: github.event_name != 'pull_request'
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs/build
+          user_name: github-actions[bot]
+          user_email: 41898282+github-actions[bot]@users.noreply.github.com
