--- a/agent_framework_pip/pyproject.toml
+++ b/agent_framework_pip/pyproject.toml
@@ -2,9 +2,9 @@
 name = "agent_framework"
 version = "0.0.1"
 authors = [
-  { name="8090", email="chris@8090.inc" },
+  { name="8090", email="support@8090.inc" },
 ]
-description = "A small example package"
+description = "A framework to connect any agent to the xrx framework"
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
@@ -14,8 +14,8 @@ classifiers = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/pypa/sampleproject"
-Issues = "https://github.com/pypa/sampleproject/issues"
+Homepage = "https://github.com/8090-inc/xrx-core"
+Issues = "https://github.com/8090-inc/xrx-core/issues"
 
 [build-system]
 requires = ["setuptools>=42", "wheel"]
