Replaced agent_framework with xrx_agent_framework in toml file and in docs

--- a/xrx_agent_framework/pyproject.toml
+++ b/xrx_agent_framework/pyproject.toml
@@ -22,4 +22,4 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages]
-find = {include = ["agent_framework*"]}
+find = {include = ["xrx_agent_framework*"]}
